# newslab-serde

./: .gitignore  Cargo.toml  LICENSE.txt  Makefile  README.md
newslab-serde/: Cargo.toml
newslab-serde-common/: Cargo.toml
newslab-serde-common/src/: lib.rs
newslab-serde-cv/: Cargo.toml
newslab-serde-cv/src/: camera_intrinsic_params.rs  camera_matrix.rs  distortion_coefs.rs  lib.rs  mrpt.rs  mrpt_calibration.rs
newslab-serde-measurements/: Cargo.toml
newslab-serde-measurements/src/: lib.rs
newslab-serde-nalgebra/: Cargo.toml
newslab-serde-nalgebra/src/: lib.rs
newslab-serde-num/: Cargo.toml
newslab-serde-num/src/: fraction.rs  lib.rs
newslab-serde-range/: Cargo.toml
newslab-serde/src/: lib.rs
