[workspace]
resolver = "2"
members = [
    "newslab-serde",
    "newslab-serde-common",
    "newslab-serde-measurements",
    "newslab-serde-nalgebra",
    "newslab-serde-cv",
    "newslab-serde-num",
]

[workspace.dependencies]
serde = { version = "1.0.188", features = ["derive"] }
nalgebra = "0.32.3"
num = "0.4.1"
anyhow = "1.0.75"
measurements = "0.11.0"

# Dev dependencies
serde_json = "1.0.106"
