[workspace]
resolver = "2"
members = [
    "newslab-serde",
    "newslab-serde-common",
    "newslab-serde-measurements",
    "newslab-serde-nalgebra",
    "newslab-serde-cv",
    "newslab-serde-num",
]

[workspace.dependencies]
serde = { version = "1.0.188", features = ["derive"] }
nalgebra = ">=0.26, <0.33"
num = "0.4.1"
anyhow = "1.0.75"
measurements = "0.11.0"
cv-convert = { version = "0.26.0", default-features = false }
opencv = { version = ">=0.63, <0.89", default-features = false }

# Dev dependencies
serde_json = "1.0.106"
