[package]
name = "newslab-serde-cv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
approx = "0.5.1"
noisy_float = { version = "0.2.0", features = ["serde"] }
serde = { workspace = true }
slice-of-array = "0.3.2"
opencv = { workspace = true, optional = true }
nalgebra = { workspace = true, optional = true }
cv-convert = { workspace = true, optional = true }

[features]
with-opencv = ["opencv", "cv-convert/opencv"]
with-nalgebra = ["nalgebra", "cv-convert/nalgebra"]

[dev-dependencies]
serde_json = { workspace = true }
