[package]
name = "newslab-serde-measurements"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
measurements = "0.11.0"
nalgebra = "0.32.3"
num = "0.4.1"
serde = { version = "1.0.188", features = ["derive"] }
