[package]
name = "newslab-serde-nalgebra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
measurements = { workspace = true }
nalgebra = { workspace = true, features = ["serde-serialize"] }
newslab-serde-measurements = { version = "0.1.0", path = "../newslab-serde-measurements" }
num = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
