[package]
name = "newslab-serde-num"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
gcd = "2.3.0"
num = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
