[package]
name = "newslab-serde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
newslab-serde-cv = { version = "0.1.0", path = "../newslab-serde-cv" }
newslab-serde-measurements = { version = "0.1.0", path = "../newslab-serde-measurements", optional = true }
newslab-serde-nalgebra = { version = "0.1.0", path = "../newslab-serde-nalgebra", optional = true }
newslab-serde-num = { version = "0.1.0", path = "../newslab-serde-num" }
newslab-serde-range = { version = "0.1.0", path = "../newslab-serde-range" }

[features]
with-opencv = ["newslab-serde-cv/with-opencv"]
with-nalgebra = ["newslab-serde-nalgebra", "newslab-serde-cv/with-nalgebra"]
with-measurements = ["newslab-serde-measurements"]
